# routers/customerRouter.ts
@@ -11,19 +11,23 @@ const control=new CustumerControl()
 
 
 // to add new customer
-customerRouter.post('/add',limiter(60,30),checkValidation(customerSchemaValidation),auth('employee'),control.addCustomer)
+customerRouter.post('/add',auth('employee'),limiter(60,30),checkValidation(customerSchemaValidation),control.addCustomer)
 // to add service to spacific customer
-customerRouter.put("/addservice/:_id",limiter(60,30),auth('employee'),control.addService)
+customerRouter.post("/addservice",auth('employee'),limiter(60,30),control.addService)
 // to delete spacific service for a spacific customer
-customerRouter.put("/deleteservice/:_id",limiter(60,30),auth('employee'),control.deleteService)
-// get services for a all customers
+customerRouter.delete("/deleteservice/:customer/:service",auth('employee'),limiter(60,30),control.deleteService)
+// stop spacific service for spacific customer
+customerRouter.put("/stopservice",auth('employee'),limiter(60,30),control.stopService)
+// activate spacific service for spacific customer
+customerRouter.put("/activateservice",auth('employee'),limiter(60,30),control.activateService)
+// get all services for spacific customer
 customerRouter.get('/getwithservices/:_id',limiter(60,30),control.getwithServices)
 //get all  customers with their active services.
-customerRouter.get('/getwithactivateservices',limiter(60,30),control.getwithActivateServices)
+customerRouter.get('/getwithactivateservices',limiter(60,30),control.getWithActivateServices)
 // delete customer
-customerRouter.delete('/delete/:_id',limiter(60,30),auth('employee'),control.deleteCustomer)
+customerRouter.delete('/delete/:_id',auth('employee'),limiter(60,30),control.deleteCustomer)
 // update customer
-customerRouter.put("/update/:_id",limiter(60,30),auth('employee'),control.updateCustomer)
+customerRouter.put("/update/:_id",auth('employee'),limiter(60,30),control.updateCustomer)
 
 
 
