# routers/employeeRouter.ts
@@ -8,7 +8,7 @@ import {limiter} from '../middleware/rateLimitter'
 const emplyeeRouter=express.Router()
 const control=new EmployeeControl()
 
-emplyeeRouter.post('/add',limiter(60,30),checkValidation(employeeSchemaValidation),auth('super'),control.addEmployee)
+emplyeeRouter.post('/add',auth('super'),limiter(60,30),checkValidation(employeeSchemaValidation),control.addEmployee)
 
 
 export default emplyeeRouter
